@@ -156,15 +156,17 @@ struct sdparm_opt_coll {
 };
 
 struct sdparm_mode_descriptor_t {
-    int num_descs_off;
-    int num_descs_bytes;
-    int num_descs_inc;    /* number to add to num_descs derived from */
-                          /* first 2 entries */
+    int num_descs_off;    /* byte offset of start of num_descriptors */
+    int num_descs_bytes;  /* number of bytes in num_descriptors field */
+    int num_descs_inc;    /* number to add to num_descriptors */
+                          /* if negative then value in num_descriptors */
+                          /* is byte count, so divide by desc_len */
     int first_desc_off;
     int desc_len;         /* -1 for unknown otherwise fixed per desc */
     int desc_len_off;     /* if (-1 == desc_len) then this is offset */
     int desc_len_bytes;   /* ... after start of descriptor */
-    /* Hence: <desc_len> = *(d_len_off + base) + d_len_off + d_len_bytes */
+    /* Hence: <desc_len> = deref(base + d_len_off, d_len_bytes) + */
+    /*                     d_len_off + d_len_bytes */
     const char * name;
 };
 
