@@ -48,6 +48,13 @@ static struct sdparm_mode_descriptor_t ssc_mpa_desc = {
     3, 1, 1, 8, 2, -1, -1, "SSC medium partition"
 };
 
+/* SMC's transport geometry parameters mode page doesn't give the number
+   of following descriptors but rather parameter length (in bytes).
+   This is flagged by -1 in num_descs_inc (third) field */
+static struct sdparm_mode_descriptor_t smc_tg_desc = {
+    1, 1, -1, 2, 2, -1, -1, "SMC transport geometry"
+};
+
 /* Mode pages that aren't specific to any transport protocol or vendor.
    Note that all standard periperal device types are include.
    The pages are listed in acronym alphabetical order. */
@@ -69,12 +76,16 @@ struct sdparm_mode_page_t sdparm_gen_mode_pg[] = {
     {CONTROL_MP, MSP_SPC_CE, -1, 0, "coe", "Control extension", NULL},
     {DATA_COMPR_MP, 0, PDT_TAPE, 0, "dac", "Data compression (SSC)", NULL},
     {DEV_CONF_MP, 0, PDT_TAPE, 0, "dc", "Device configuration (SSC)", NULL},
+    {DEV_CAP_MP, 0, PDT_MCHANGER, 0, "dca", "Device capabilities (SMC)",
+        NULL},
     {DEV_CONF_MP, MSP_DEV_CONF_EXT, PDT_TAPE, 0, "dce",
         "Device configuration extension (SSC)", NULL},
     {DISCONNECT_MP, 0, -1, 0, "dr",
         "Disconnect-reconnect (SPC + transports)", NULL},
     {ELE_ADDR_ASS_MP, 0, PDT_MCHANGER, 0, "eaa",
         "Element address assignment (SMC)", NULL},
+    {DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 0, "edc",
+        "Extended device capabilities (SMC)", NULL},
     {ES_MAN_MP, 0, PDT_SES, 0, "esm", "Enclosure services management (SES)",
         NULL},
     {FORMAT_MP, 0, PDT_DISK, 0, "fo", "Format (SBC)", NULL},
@@ -86,15 +97,18 @@ struct sdparm_mode_page_t sdparm_gen_mode_pg[] = {
     {CONTROL_MP, MSP_SAT_PATA, -1, 0, "pat", "SAT pATA control", NULL},
     {PROT_SPEC_LU_MP, 0, -1, 0, "pl", "Protocol specific logical unit", NULL},
     {POWER_MP, 0, -1, 0, "po", "Power condition", NULL},
-    {POWER_OLD_MP, 0, PDT_DISK, 0, "poo", "Power condition - old version", NULL},
-        /* POWER_OLD_MP for disks as it clashes with old MMC specs */
+    {POWER_OLD_MP, 0, PDT_DISK, 0, "poo", "Power condition - old version",
+        NULL}, /* POWER_OLD_MP for disks as it clashes with old MMC specs */
     {PROT_SPEC_PORT_MP, 0, -1, 0, "pp", "Protocol specific port", NULL},
     {RBC_DEV_PARAM_MP, 0, PDT_RBC, 0, "rbc", "RBC device parameters (RBC)",
         NULL},
     {RIGID_DISK_MP, 0, PDT_DISK, 0, "rd", "Rigid disk (SBC)", NULL},
     {RW_ERR_RECOVERY_MP, 0, -1, 0, "rw", "Read write error recovery", NULL},
         /* since in SBC, SSC and MMC treat RW_ERR_RECOVERY_MP as if in SPC */
-    {THIN_PROV_MP, MSP_THIN_PROV, PDT_DISK, 0, "thp", "Thin provisioning (SBC)", NULL},
+    {TRANS_GEO_PAR_MP, 0, PDT_MCHANGER, 0, "tgp", "Transport geometry "
+        "parameters (SMC)", &smc_tg_desc},
+    {THIN_PROV_MP, MSP_THIN_PROV, PDT_DISK, 0, "thp", "Thin provisioning "
+        "(SBC)", NULL},
     {TIMEOUT_PROT_MP, 0, PDT_MMC, 0, "tp", "Timeout and protect (MMC)", NULL},
     {V_ERR_RECOVERY_MP, 0, PDT_DISK, 0, "ve", "Verify error recovery (SBC)",
         NULL},
@@ -835,6 +849,146 @@ struct sdparm_mode_page_item sdparm_mitem_arr[] = {
         "First data transfer element address", NULL},
     {"NDTE", ELE_ADDR_ASS_MP, 0, PDT_MCHANGER, 16, 7, 16, 0,
         "Number of data transfer elements", NULL},
+
+    /* Transport geometry parameters mode page [0x1e] smc2 */
+    {"ROTAT", TRANS_GEO_PAR_MP, 0, PDT_MCHANGER, 2, 0, 1, 0,
+        "Rotation for double sided media handling", NULL},
+    {"MNTES", TRANS_GEO_PAR_MP, 0, PDT_MCHANGER, 3, 7, 8, 0,
+        "Member number in transport element set", NULL},
+
+    /* Device capabilities mode page [0x1f] smc3 */
+    {"STORDT", DEV_CAP_MP, 0, PDT_MCHANGER, 2, 3, 1, 0,
+        "Storage for data transfer element", NULL},
+    {"STORIE", DEV_CAP_MP, 0, PDT_MCHANGER, 2, 2, 1, 0,
+        "Storage for import/export element", NULL},
+    {"STORST", DEV_CAP_MP, 0, PDT_MCHANGER, 2, 1, 1, 0,
+        "Storage for storage element", NULL},
+    {"STORMT", DEV_CAP_MP, 0, PDT_MCHANGER, 2, 0, 1, 0,
+        "Storage for medium transport element", NULL},
+    {"ACE", DEV_CAP_MP, 0, PDT_MCHANGER, 3, 2, 1, 0,
+        "Auto clean enabled", NULL},
+    {"VTRP", DEV_CAP_MP, 0, PDT_MCHANGER, 3, 1, 1, 0,
+        "Volume tag reader present", NULL},
+    {"S2C", DEV_CAP_MP, 0, PDT_MCHANGER, 3, 0, 1, 0,
+        "SMC-2 capabilities supported", NULL},
+    {"MT_RA", DEV_CAP_MP, 0, PDT_MCHANGER, 4, 7, 2, 0,
+        "Medium transport elements support Read Attribute", NULL},
+    {"MT2DT", DEV_CAP_MP, 0, PDT_MCHANGER, 4, 3, 1, 0,
+        "Medium transport -> data transfer; Move Medium", NULL},
+    {"MT2IE", DEV_CAP_MP, 0, PDT_MCHANGER, 4, 2, 1, 0,
+        "Medium transport -> import/export; Move Medium", NULL},
+    {"MT2ST", DEV_CAP_MP, 0, PDT_MCHANGER, 4, 1, 1, 0,
+        "Medium transport -> storage; Move Medium", NULL},
+    {"MT2MT", DEV_CAP_MP, 0, PDT_MCHANGER, 4, 0, 1, 0,
+        "Medium transport -> medium transport; Move Medium", NULL},
+    {"ST_RA", DEV_CAP_MP, 0, PDT_MCHANGER, 5, 7, 2, 0,
+        "Storage elements support Read Attribute", NULL},
+    {"ST2DT", DEV_CAP_MP, 0, PDT_MCHANGER, 5, 3, 1, 0,
+        "Storage -> data transfer; Move Medium", NULL},
+    {"ST2IE", DEV_CAP_MP, 0, PDT_MCHANGER, 5, 2, 1, 0,
+        "Storage -> import/export; Move Medium", NULL},
+    {"ST2ST", DEV_CAP_MP, 0, PDT_MCHANGER, 5, 1, 1, 0,
+        "Storage -> storage; Move Medium", NULL},
+    {"ST2MT", DEV_CAP_MP, 0, PDT_MCHANGER, 5, 0, 1, 0,
+        "Storage -> medium transport; Move Medium", NULL},
+    {"IE_RA", DEV_CAP_MP, 0, PDT_MCHANGER, 6, 7, 2, 0,
+        "Import/export elements support Read Attribute", NULL},
+    {"IE2DT", DEV_CAP_MP, 0, PDT_MCHANGER, 6, 3, 1, 0,
+        "Import/export -> data transfer; Move Medium", NULL},
+    {"IE2IE", DEV_CAP_MP, 0, PDT_MCHANGER, 6, 2, 1, 0,
+        "Import/export -> import/export; Move Medium", NULL},
+    {"IE2ST", DEV_CAP_MP, 0, PDT_MCHANGER, 6, 1, 1, 0,
+        "Import/export -> storage; Move Medium", NULL},
+    {"IE2MT", DEV_CAP_MP, 0, PDT_MCHANGER, 6, 0, 1, 0,
+        "Import/export -> medium transport; Move Medium", NULL},
+    {"DT_RA", DEV_CAP_MP, 0, PDT_MCHANGER, 7, 7, 2, 0,
+        "Data transfer elements support Read Attribute", NULL},
+    {"DT2DT", DEV_CAP_MP, 0, PDT_MCHANGER, 7, 3, 1, 0,
+        "Data transfer -> data transfer; Move Medium", NULL},
+    {"DT2IE", DEV_CAP_MP, 0, PDT_MCHANGER, 7, 2, 1, 0,
+        "Data transfer -> import/export; Move Medium", NULL},
+    {"DT2ST", DEV_CAP_MP, 0, PDT_MCHANGER, 7, 1, 1, 0,
+        "Data transfer -> storage; Move Medium", NULL},
+    {"DT2MT", DEV_CAP_MP, 0, PDT_MCHANGER, 7, 0, 1, 0,
+        "Data transfer -> medium transport; Move Medium", NULL},
+    {"MT_WA", DEV_CAP_MP, 0, PDT_MCHANGER, 12, 7, 2, 0,
+        "Medium transport elements support Write Attribute", NULL},
+    {"MTEDT", DEV_CAP_MP, 0, PDT_MCHANGER, 12, 3, 1, 0,
+        "Medium transport -> data transfer; Exchange Medium", NULL},
+    {"MTEIE", DEV_CAP_MP, 0, PDT_MCHANGER, 12, 2, 1, 0,
+        "Medium transport -> import/export; Exchange Medium", NULL},
+    {"MTEST", DEV_CAP_MP, 0, PDT_MCHANGER, 12, 1, 1, 0,
+        "Medium transport -> storage; Exchange Medium", NULL},
+    {"MTEMT", DEV_CAP_MP, 0, PDT_MCHANGER, 12, 0, 1, 0,
+        "Medium transport -> medium transport; Exchange Medium", NULL},
+    {"ST_WA", DEV_CAP_MP, 0, PDT_MCHANGER, 13, 7, 2, 0,
+        "Storage elements support Write Attribute", NULL},
+    {"STEDT", DEV_CAP_MP, 0, PDT_MCHANGER, 13, 3, 1, 0,
+        "Storage -> data transfer; Exchange Medium", NULL},
+    {"STEIE", DEV_CAP_MP, 0, PDT_MCHANGER, 13, 2, 1, 0,
+        "Storage -> import/export; Exchange Medium", NULL},
+    {"STEST", DEV_CAP_MP, 0, PDT_MCHANGER, 13, 1, 1, 0,
+        "Storage -> storage; Exchange Medium", NULL},
+    {"STEMT", DEV_CAP_MP, 0, PDT_MCHANGER, 13, 0, 1, 0,
+        "Storage -> medium transport; Exchange Medium", NULL},
+    {"IE_WA", DEV_CAP_MP, 0, PDT_MCHANGER, 14, 7, 2, 0,
+        "Import/export elements support Write Attribute", NULL},
+    {"IEEDT", DEV_CAP_MP, 0, PDT_MCHANGER, 14, 3, 1, 0,
+        "Import/export -> data transfer; Exchange Medium", NULL},
+    {"IEEIE", DEV_CAP_MP, 0, PDT_MCHANGER, 14, 2, 1, 0,
+        "Import/export -> import/export; Exchange Medium", NULL},
+    {"IEEST", DEV_CAP_MP, 0, PDT_MCHANGER, 14, 1, 1, 0,
+        "Import/export -> storage; Exchange Medium", NULL},
+    {"IEEMT", DEV_CAP_MP, 0, PDT_MCHANGER, 14, 0, 1, 0,
+        "Import/export -> medium transport; Exchange Medium", NULL},
+    {"DT_WA", DEV_CAP_MP, 0, PDT_MCHANGER, 15, 7, 2, 0,
+        "Data transfer elements support Write Attribute", NULL},
+    {"DTEDT", DEV_CAP_MP, 0, PDT_MCHANGER, 15, 3, 1, 0,
+        "Data transfer -> data transfer; Exchange Medium", NULL},
+    {"DTEIE", DEV_CAP_MP, 0, PDT_MCHANGER, 15, 2, 1, 0,
+        "Data transfer -> import/export; Exchange Medium", NULL},
+    {"DTEST", DEV_CAP_MP, 0, PDT_MCHANGER, 15, 1, 1, 0,
+        "Data transfer -> storage; Exchange Medium", NULL},
+    {"DTEMT", DEV_CAP_MP, 0, PDT_MCHANGER, 15, 0, 1, 0,
+        "Data transfer -> medium transport; Exchange Medium", NULL},
+
+    /* Extended device capabilities mode page [0x1f,0x41] smc3 */
+    {"MVPRV", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 4, 5, 1, 0,
+        "Move prevented to import/export element", NULL},
+    {"MVCL", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 4, 4, 1, 0,
+        "Move closes import/export element", NULL},
+    {"MVOP", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 4, 3, 1, 0,
+        "Move opens import/export element", NULL},
+    {"USRCL", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 4, 2, 1, 0,
+        "User control import/export element close", NULL},
+    {"USROP", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 4, 1, 1, 0,
+        "User control import/export element open", NULL},
+    {"IEST", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 4, 0, 1, 0,
+        "Import/export element state", NULL},
+    {"DTETA", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 5, 4, 1, 0,
+        "Data transfer element empty on door access", NULL},
+    {"RSSEA", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 5, 3, 1, 0,
+        "Return to source storage element address", NULL},
+    {"MVTRY", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 5, 2, 1, 0,
+        "Move tray", NULL},
+    {"IEMGZ", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 5, 1, 1, 0,
+        "Import/export magazine", NULL},
+    {"SMGZ", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 5, 0, 1, 0,
+        "Storage magazine", NULL},
+    {"TREXC", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 6, 2, 1, 0,
+        "True exchange capable", NULL},
+    {"LCKIE", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 6, 1, 1, 0,
+        "Lock import/export element", NULL},
+    {"LCKD", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 6, 0, 1, 0,
+        "Lock door", NULL},
+    {"SPMER", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 7, 2, 1, 0,
+        "Source pre-move eject required", NULL},
+    {"DPMER", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 7, 1, 1, 0,
+        "Destination pre-move eject required", NULL},
+    {"PEPOS", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 7, 0, 1, 0,
+        "Pre-eject position", NULL},
+    {"UCST", DEV_CAP_MP, MSP_EXT_DEV_CAP, PDT_MCHANGER, 8, 0, 1, 0,
+        "Unassigned cleaning storage", NULL},
 
     /* CD/DVD (MM) capabilities and mechanical status mode page */
     /* [0x2a] obsolete in mmc4 and mmc5, last valid in mmc3 */
